# c_c-_python_mutprog

boost_c_py/: CMakeLists.txt~  embedding.cc~
boost_c_py/c++调用py/: CMakeLists.txt  embedding.cc  embedding.cc~  simple.py
boost_c_py/py调用c++/: CMakeLists.txt  CMakeLists.txt~  boostDemo.cpp~  pycall.py~
c++调用py/: Format Strings for PyArg_ParseTuple.cpp  bb.cpp~  dd.py  dd.py~  说明.txt~
c++调用py/test1/: Test001.py  test  test.cpp  test.cpp~
c++调用py/test2模板/: CMakeLists.txt  CMakeLists.txt~  testcpp.cpp~  testpy.py  说明.txt~
py调用c++/: pycall.c  pycall.py  pycallcpp.cpp  pycallcpp.py
